[build-system]
requires = ["setuptools >= 63.0", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["benchmarks", "binder", "conda-envs", "docs", "scripts", "tests"]

[project]
dynamic = ["version"]
name = "pymc"
authors = [{name = "PyMC Developers", email = "pymc.devs@gmail.com"}]
description = "Probabilistic Programming in Python: Bayesian Modeling and Probabilistic Machine Learning with PyTensor"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.10"
dependencies = [
  "arviz>=0.13.0",
  "cachetools>=4.2.1",
  "cloudpickle",
  "numpy>=1.15.0",
  "pandas>=0.24.0",
  "pytensor>=2.22.1,<2.23",
  "rich>=13.7.1",
  "scipy>=1.4.1",
  "threadpoolctl>=3.1.0,<4.0.0",
  "typing-extensions>=3.7.4",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://www.pymc.io/"
Documentation = "https://www.pymc.io/projects/docs/en/stable/api.html"
Repository = "https://github.com/pymc-devs/pymc"
Issues = "https://github.com/pymc-devs/pymc/issues"
Releases = "https://github.com/pymc-devs/pymc/releases"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "6.0"
xfail_strict = true
addopts = ["--color=yes"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "pymc/_version.py"
versionfile_build = "pymc/_version.py"
tag_prefix = "v"

[tool.mypy]
python_version = "3.10"
no_implicit_optional = false
strict_optional = true
warn_redundant_casts = false
check_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_decorators = false
ignore_missing_imports = true
warn_unused_ignores = false

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["versioneer.py", "_version.py"]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP", "W", "RUF"]
ignore = [
  "E501",
  "F841", # Local variable name is assigned to but never used
  "RUF001", # String contains ambiguous character (such as Greek letters)
  "RUF002", # Docstring contains ambiguous character (such as Greek letters)
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D200",
  "D202",
  "D203",
  "D204",
  "D205",
  "D209",
  "D212",
  "D213",
  "D301",
  "D400",
  "D401",
  "D403",
  "D413",
  "D415",
  "D417",
]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
  "F401", # Module imported but unused
  "F403", # 'from module import *' used; unable to detect undefined names
]
"docs/source/*" = ["D"]
"pymc/__init__.py" = [
  "E402", # Module level import not at top of file
]
"pymc/stats/__init__.py" = [
  "E402", # Module level import not at top of file
]
"pymc/logprob/__init__.py" = [
  "I001", # Import block is un-sorted or un-formatted
]
"tests/*" = ["D"]

[tool.coverage.report]
exclude_lines = [
  "pragma: nocover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.coverage.run]
omit = ["*examples*"]
